// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render Intro 1`] = `
Array [
  <div
    className="fr-callout fr-mb-3w"
  >
    <h1
      className="fr-callout__title"
    >
      Dashlord fabrique numérique
    </h1>
    <p
      className="fr-callout__text"
    >
      <br />
      DashLord compile les données techniques issues de différents outils open-source.
      <br />
      Cette évaluation ne remplace en aucun cas une expertise manuelle, et seule la page d'accueil du site est ici évaluée.
      <br />
      Vous pouvez
       
      <a
        href="https://github.com/SocialGouv/dashlord/issues/new"
        rel="noopener noreferrer"
        target="_blank"
      >
        soumettre de nouvelles URLs, proposer des corrections
      </a>
       
      ou
       
      <a
        href="https://github.com/orgs/SocialGouv/projects/13"
        rel="noopener noreferrer"
        target="_blank"
      >
        consulter la roadmap
      </a>
      .
      <br />
      <br />
    </p>
    <a
      href="/dashboard"
      onClick={[Function]}
    >
      <button
        className="fr-btn--md fr-btn"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Accéder au tableau de bord
      </button>
    </a>
  </div>,
  <div
    className=""
  >
    <div>
      <h5>
        Google Lighthouse
      </h5>
      <a
        href="https://developers.google.com/web/tools/lighthouse"
        rel="noreferrer noopener"
        style={
          Object {
            "float": "right",
          }
        }
        target="_blank"
      >
        Site officiel
      </a>
    </div>
    <div>
      Permet un audit automatique de page web :
      <br />
      <br />
      <li>
        Performances de chargement
      </li>
      <li>
        Bonnes pratiques SEO (référencement)
      </li>
      <li>
        Bonnes pratiques accessibilité (moteur Axe)
      </li>
      <li>
        Bonnes pratiques web
      </li>
      <br />
      <div
        className="fr-alert fr-alert--success"
        role="alert"
      >
        <p
          className="fr-alert__title"
        >
          
        </p>
        <p>
          L'audit complet avec les recommandations de correction est disponible pour chaque URL
        </p>
      </div>
      <div
        className="fr-alert fr-alert--info"
        role="alert"
      >
        <p
          className="fr-alert__title"
        >
          
        </p>
        <p>
          Les mesures de performance sont un instantané, donc pas forcément représentatives
        </p>
      </div>
      <div
        className="fr-alert fr-alert--warning"
        role="alert"
      >
        <p
          className="fr-alert__title"
        >
          
        </p>
        <p>
          <span>
            Les mesures d'accessibilité n'abordent pas du tout
             
            <a
              href="https://www.numerique.gouv.fr/publications/rgaa-accessibilite/"
              rel="noopener noreferrer"
              target="_blank"
            >
              le RGAA
            </a>
            .
          </span>
        </p>
      </div>
    </div>
  </div>,
  <div
    className=""
  >
    <div>
      <h5>
        Dependabot
      </h5>
      <a
        href="https://dependabot.com/"
        rel="noreferrer noopener"
        style={
          Object {
            "float": "right",
          }
        }
        target="_blank"
      >
        Site officiel
      </a>
    </div>
    <div>
      Recense les vulnérabilités de tes dépendances dans le code source
      <br />
      <br />
      <a
        href="https://docs.github.com/en/code-security/supply-chain-security/about-alerts-for-vulnerable-dependencies"
        rel="noopener noreferrer"
        target="_blank"
      >
        Scan des vulnérabilités des dépendances sur le dépôt Github du code
      </a>
      <br />
      <br />
      <div
        className="fr-alert fr-alert--info"
        role="alert"
      >
        <p
          className="fr-alert__title"
        >
          
        </p>
        <p>
          Nécessite d'avoir activé Dependabot sur ses repositories GitHub
        </p>
      </div>
    </div>
  </div>,
  <div
    className=""
  >
    <div>
      <h5>
        Codescan
      </h5>
      <a
        href="https://docs.github.com/en/code-security/secure-coding/about-code-scanning"
        rel="noreferrer noopener"
        style={
          Object {
            "float": "right",
          }
        }
        target="_blank"
      >
        Documentation
      </a>
    </div>
    <div>
      Recense les potentielles vulnérabilités dans ton code
      <br />
      <br />
      <li>
        Scan des potentielles vulnérabilités sur le dépôt Github du code
      </li>
      <li>
        Possibilité d'activer autant de scanner souhaité: CodeQL, etc
      </li>
      <li>
        Liste restreinte de langages couverts: C/C++, C#, Go, Java, JavaScript/TypeScript, Python
      </li>
       
      <br />
      <br />
      <div
        className="fr-alert fr-alert--info"
        role="alert"
      >
        <p
          className="fr-alert__title"
        >
          
        </p>
        <p>
          Nécessite d'avoir activé CodeQL sur le repository
        </p>
      </div>
    </div>
  </div>,
  <div
    className=""
  >
    <div>
      <h5>
        Nmap
      </h5>
      <a
        href="https://nmap.org"
        rel="noreferrer noopener"
        style={
          Object {
            "float": "right",
          }
        }
        target="_blank"
      >
        Site officiel
      </a>
    </div>
    <div>
      Nmap scan les vulnérabilités d'une machine (IP) associée à un domaine
      <br />
      <br />
      <a
        href="https://nmap.org/nsedoc/scripts/vulners.html"
        rel="noopener noreferrer"
        target="_blank"
      >
        Scan des ports ouverts avec vulnérabilités grâce au script vulners
      </a>
    </div>
  </div>,
  <div
    className=""
  >
    <div>
      <h5>
        OWASP Zed Attack Proxy
      </h5>
      <a
        href="https://www.zaproxy.org/docs/docker/baseline-scan/"
        rel="noreferrer noopener"
        style={
          Object {
            "float": "right",
          }
        }
        target="_blank"
      >
        Site officiel
      </a>
    </div>
    <div>
      Scan de vulnérabilités passif "baseline" qui permet de détecter des risques de sécurité.
      <br />
      <br />
      <li>
        Bonnes pratiques web
      </li>
      <li>
        Bonnes pratiques http
      </li>
      <br />
      <div
        className="fr-alert fr-alert--info"
        role="alert"
      >
        <p
          className="fr-alert__title"
        >
          
        </p>
        <p>
          L'audit complet avec les recommandations de correction est disponible pour chaque URL
        </p>
      </div>
    </div>
  </div>,
  <div
    className=""
  >
    <div>
      <h5>
        testssl.sh
      </h5>
      <svg
        fill="none"
        height={20}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        style={
          Object {
            "cursor": "pointer",
            "marginLeft": 5,
          }
        }
        viewBox="0 0 24 24"
        width={20}
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <line
          x1="12"
          x2="12"
          y1="16"
          y2="12"
        />
        <line
          x1="12"
          x2="12.01"
          y1="8"
          y2="8"
        />
      </svg>
      <a
        href="https://testssl.sh/"
        rel="noreferrer noopener"
        style={
          Object {
            "float": "right",
          }
        }
        target="_blank"
      >
        Site officiel
      </a>
    </div>
    <div>
      Évalue le niveau de confiance d'un certificat SSL
      <br />
      <br />
      <li>
        Bonnes pratiques de configuration
      </li>
      <li>
        Protocoles disponibles
      </li>
      <li>
        Compatibilité navigateurs
      </li>
      <li>
        Solidité des clés de chiffrement
      </li>
      <br />
      <div
        className="fr-alert fr-alert--info"
        role="alert"
      >
        <p
          className="fr-alert__title"
        >
          
        </p>
        <p>
          L'audit complet avec les recommandations de correction est disponible pour chaque URL
        </p>
      </div>
    </div>
  </div>,
  <div
    className=""
  >
    <div>
      <h5>
        Mozilla HTTP observatory
      </h5>
      <svg
        fill="none"
        height={20}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        style={
          Object {
            "cursor": "pointer",
            "marginLeft": 5,
          }
        }
        viewBox="0 0 24 24"
        width={20}
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <line
          x1="12"
          x2="12"
          y1="16"
          y2="12"
        />
        <line
          x1="12"
          x2="12.01"
          y1="8"
          y2="8"
        />
      </svg>
      <a
        href="https://observatory.mozilla.org/"
        rel="noreferrer noopener"
        style={
          Object {
            "float": "right",
          }
        }
        target="_blank"
      >
        Site officiel
      </a>
    </div>
    <div>
      Évalue le niveau de qualité/sécurité de la page web et de son serveur
      <br />
      <br />
      <li>
        Bonnes pratiques de configuration
      </li>
      <li>
        Bonnes pratiques web
      </li>
      <li>
        Solidité des clés de chiffrement
      </li>
    </div>
  </div>,
  <div
    className=""
  >
    <div>
      <h5>
        Updown.io
      </h5>
      <svg
        fill="none"
        height={20}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        style={
          Object {
            "cursor": "pointer",
            "marginLeft": 5,
          }
        }
        viewBox="0 0 24 24"
        width={20}
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <line
          x1="12"
          x2="12"
          y1="16"
          y2="12"
        />
        <line
          x1="12"
          x2="12.01"
          y1="8"
          y2="8"
        />
      </svg>
      <a
        href="https://updown.io/"
        rel="noreferrer noopener"
        style={
          Object {
            "float": "right",
          }
        }
        target="_blank"
      >
        Site officiel
      </a>
    </div>
    <div>
      Évalue la qualité de service rendue par le serveur
      <br />
      <br />
      <li>
        Temps de réponse
      </li>
      <li>
        Disponibilité
      </li>
      <li>
        Indice de performance : APDEX
      </li>
      <li>
        Validité des certificats TLS
      </li>
      <br />
      <div
        className="fr-alert fr-alert--info"
        role="alert"
      >
        <p
          className="fr-alert__title"
        >
          
        </p>
        <p>
          Vous devez disposer d'un compte updown.io et d'une clé API
        </p>
      </div>
    </div>
  </div>,
  <div
    className=""
  >
    <div>
      <h5>
        Nucléi
      </h5>
      <a
        href="https://nuclei.projectdiscovery.io/"
        rel="noreferrer noopener"
        style={
          Object {
            "float": "right",
          }
        }
        target="_blank"
      >
        Site officiel
      </a>
    </div>
    <div>
      Détecte plus de 700 erreurs de configuration courantes sur les applications webs.
      <br />
      <br />
      <li>
        Sécurité
      </li>
      <li>
        Bonnes pratiques web
      </li>
    </div>
  </div>,
  <div
    className=""
  >
    <div>
      <h5>
        Third-parties
      </h5>
      <a
        href="https://github.com/SocialGouv/thirdparties"
        rel="noreferrer noopener"
        style={
          Object {
            "float": "right",
          }
        }
        target="_blank"
      >
        Code source
      </a>
    </div>
    <div>
      Liste tous les scripts externes chargés par une URL et qui peuvent avoir un impact sur :
      <br />
      <br />
      <li>
        Performances web
      </li>
      <li>
        Sécurité
      </li>
      <li>
        Vie privée
      </li>
      <br />
      <div
        className="fr-alert fr-alert--warning"
        role="alert"
      >
        <p
          className="fr-alert__title"
        >
          
        </p>
        <p>
          Certains script légitimes peuvent apparaitre dans cette catégorie s'ils sont hébergés sur d'autres serveurs
        </p>
      </div>
    </div>
  </div>,
  <div
    className=""
  >
    <div>
      <h5>
        GeoIP2
      </h5>
      <a
        href="https://www.maxmind.com/en/geoip-demo"
        rel="noreferrer noopener"
        style={
          Object {
            "float": "right",
          }
        }
        target="_blank"
      >
        Site officiel
      </a>
    </div>
    <div>
      Géolocalise tous les serveurs contactés lors de l'ouverture d'une URL.
      <br />
      <br />
      <li>
        Vie privée
      </li>
    </div>
  </div>,
  <div
    className=""
  >
    <div>
      <h5>
        Wappalyzer
      </h5>
      <a
        href="https://www.wappalyzer.com/"
        rel="noreferrer noopener"
        style={
          Object {
            "float": "right",
          }
        }
        target="_blank"
      >
        Site officiel
      </a>
    </div>
    <div>
      Wappalyzer reconnait +1500 technologies web, Javascript, CMS, outillage...
      <br />
      <br />
      <li>
        Stack technique
      </li>
      <li>
        Obsolescence
      </li>
      <li>
        Parc
      </li>
    </div>
  </div>,
  <div
    className=""
  >
    <div>
      <h5>
        Statistiques
      </h5>
    </div>
    <div>
      Vérifie si la page /stats existe
      <br />
      <br />
      Par exemple:
       
      <a
        href="https://beta.gouv.fr/stats"
        rel="noopener noreferrer"
        target="_blank"
      >
        Beta.gouv.fr
      </a>
    </div>
  </div>,
  <div
    className=""
  >
    <div>
      <h5>
        Erreurs 404
      </h5>
    </div>
    <div>
      Explore le site web et détecte les liens brisés.
    </div>
  </div>,
  <div
    className=""
  >
    <div>
      <h5>
        Vulnérabilités Trivy
      </h5>
      <a
        href="https://aquasecurity.github.io/trivy/"
        rel="noreferrer noopener"
        style={
          Object {
            "float": "right",
          }
        }
        target="_blank"
      >
        Site officiel
      </a>
    </div>
    <div>
      Trivy permet de scanner les containers docker à la recherche de vulnérabilités connues.
      <br />
      <br />
      Trivy détecte les vulnérabilités niveau OS (Alpine, RHEL, CentOS, etc.) mais aussi niveau packages (Bundler, Composer, npm, yarn, etc.).
    </div>
  </div>,
]
`;

exports[`Tools config Should render Intro with limited tools 1`] = `
Array [
  <div
    className="fr-callout fr-mb-3w"
  >
    <h1
      className="fr-callout__title"
    >
      Dashlord fabrique numérique
    </h1>
    <p
      className="fr-callout__text"
    >
      <br />
      DashLord compile les données techniques issues de différents outils open-source.
      <br />
      Cette évaluation ne remplace en aucun cas une expertise manuelle, et seule la page d'accueil du site est ici évaluée.
      <br />
      Vous pouvez
       
      <a
        href="https://github.com/SocialGouv/dashlord/issues/new"
        rel="noopener noreferrer"
        target="_blank"
      >
        soumettre de nouvelles URLs, proposer des corrections
      </a>
       
      ou
       
      <a
        href="https://github.com/orgs/SocialGouv/projects/13"
        rel="noopener noreferrer"
        target="_blank"
      >
        consulter la roadmap
      </a>
      .
      <br />
      <br />
    </p>
    <a
      href="/dashboard"
      onClick={[Function]}
    >
      <button
        className="fr-btn--md fr-btn"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Accéder au tableau de bord
      </button>
    </a>
  </div>,
  <div
    className=""
  >
    <div>
      <h5>
        OWASP Zed Attack Proxy
      </h5>
      <a
        href="https://www.zaproxy.org/docs/docker/baseline-scan/"
        rel="noreferrer noopener"
        style={
          Object {
            "float": "right",
          }
        }
        target="_blank"
      >
        Site officiel
      </a>
    </div>
    <div>
      Scan de vulnérabilités passif "baseline" qui permet de détecter des risques de sécurité.
      <br />
      <br />
      <li>
        Bonnes pratiques web
      </li>
      <li>
        Bonnes pratiques http
      </li>
      <br />
      <div
        className="fr-alert fr-alert--info"
        role="alert"
      >
        <p
          className="fr-alert__title"
        >
          
        </p>
        <p>
          L'audit complet avec les recommandations de correction est disponible pour chaque URL
        </p>
      </div>
    </div>
  </div>,
]
`;
